jlamontSC-test/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>rC_Giving__Corporate Underwriting</fullName>
        <description>Corporate Underwriting Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Inkind</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Membership</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Outright Gift</fullName>
        <description>An outright gift is a donation that is a one-time gift for any amount.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Pledge</fullName>
        <description>A pledge is the promise to donate a certain amount of money that will be paid in increments over a period of time.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Pledge Payment</fullName>
        <description>Tracks pledge payments, expected pledge payments, and refunds</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Suspended</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Proposal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Identified</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
        <values>
            <fullName>Written Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Purchase</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Complete</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Uncollectible</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Giving__Transaction</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <description>Account Owner FN + LN</description>
        <formula>IF(ISBLANK(Account.Owner.FirstName),
&apos;&apos;,
Account.Owner.FirstName + &apos; &apos;)
+ Account.Owner.LastName</formula>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>Account Record Type</description>
        <formula>Account.RecordType.DeveloperName</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Giving_Number__c</fullName>
        <description>Automatically generated Giving Number for newly created Giving records.</description>
        <displayFormat>A-{0000000}</displayFormat>
        <inlineHelpText>Automatically generated Giving Number for newly created Giving records.</inlineHelpText>
        <label>Auto Giving #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BankCode__c</fullName>
        <description>Payment table field</description>
        <label>Bank</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beg_Yr_Forecast_matches_Curr_Forecast__c</fullName>
        <description>Does the Beginning Year Forecast match the Current Forecast?  ( As this value is modified by the probability, this calculation becomes tricky )</description>
        <formula>Beginning_Yr_Forecast__c =  Current_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Does the Beginning Year Forecast match the Current Forecast?</inlineHelpText>
        <label>Beg Yr Forecast matches Curr. Forecast?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beg_Yr_Forecast_matches_Projected_Amt__c</fullName>
        <description>Does the beginning year forecast match the Projected Amount?  Used for finding problem proposals during budgeting.</description>
        <formula>Beginning_Yr_Forecast__c =  rC_Giving__Projected_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Does the beginning year forecast match the Projected Amount?</inlineHelpText>
        <label>Beg Yr Forecast matches Projected Amt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beginning_Yr_Forecast__c</fullName>
        <description>Forecast at the beginning of the year that will is used for budgeting purposes.</description>
        <label>Beginning Yr Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillTerms__c</fullName>
        <description>Payment table field</description>
        <label>Bill Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Endowment--Cash</fullName>
                </value>
                <value>
                    <fullName>Endowment--Stock</fullName>
                </value>
                <value>
                    <fullName>Life Income Trust--Cash</fullName>
                </value>
                <value>
                    <fullName>Life Income Trust--Stock</fullName>
                </value>
                <value>
                    <fullName>WG 1 installment</fullName>
                </value>
                <value>
                    <fullName>WG 12 installments</fullName>
                </value>
                <value>
                    <fullName>WG 4 installments</fullName>
                </value>
                <value>
                    <fullName>WG 2 installments</fullName>
                </value>
                <value>
                    <fullName>Cash no Money</fullName>
                </value>
                <value>
                    <fullName>Wilderness Guardian EFT</fullName>
                </value>
                <value>
                    <fullName>Life single installments</fullName>
                </value>
                <value>
                    <fullName>Life joint installments</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Claims Paid</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Electronic Funds Transfer</fullName>
                </value>
                <value>
                    <fullName>Free Membership/Sub</fullName>
                </value>
                <value>
                    <fullName>Independent Action</fullName>
                </value>
                <value>
                    <fullName>In-kind (cash value)</fullName>
                </value>
                <value>
                    <fullName>Credit Card - Political Committee</fullName>
                </value>
                <value>
                    <fullName>Stock (cash value)</fullName>
                </value>
                <value>
                    <fullName>Voter Education Fund II</fullName>
                </value>
                <value>
                    <fullName>Wilderness Guardian Membership</fullName>
                </value>
                <value>
                    <fullName>Cash Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillType__c</fullName>
        <description>Payment table field</description>
        <label>Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complimentary</fullName>
                </value>
                <value>
                    <fullName>Subscription Dues</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Organization Gift</fullName>
                </value>
                <value>
                    <fullName>Non-Gift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Affecting__c</fullName>
        <label>Budget Affecting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget-Affecting</fullName>
                </value>
                <value>
                    <fullName>Non-Budget Affecting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <description>Copied from batch upload for online giving</description>
        <label>Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_Forecast__c</fullName>
        <description>Projected Amount * Probability</description>
        <formula>rC_Giving__Projected_Amount__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Projected Amount * Probability</inlineHelpText>
        <label>Current Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Downloaded__c</fullName>
        <description>Date the record was downloaded to Club, to distinguish which have not yet been downloaded</description>
        <label>Date Downloaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonType__c</fullName>
        <description>Payment table field</description>
        <label>Special Donation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anonymous</fullName>
                </value>
                <value>
                    <fullName>Commemorative</fullName>
                </value>
                <value>
                    <fullName>Donor Advised</fullName>
                </value>
                <value>
                    <fullName>F / Unknown</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
                <value>
                    <fullName>Donor directed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Giving (Contact)</relationshipLabel>
        <relationshipName>Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor_Employer__c</fullName>
        <description>For political gifts</description>
        <label>Donor Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Location_of_Employment__c</fullName>
        <description>For political gifts</description>
        <label>Donor Location of Employment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Occupation__c</fullName>
        <description>For political gifts</description>
        <label>Donor Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_US_Citizen_Valid_Green_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For political gifts</description>
        <label>Donor US Citizen/Valid Green Card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DtInvc__c</fullName>
        <description>Product table field</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <inlineHelpText>Value of any goods received</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The form on which the donation was made.</description>
        <label>Form Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Form Giving</relationshipLabel>
        <relationshipName>Giving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundType__c</fullName>
        <description>Product table field</description>
        <label>Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administered Funds</fullName>
                </value>
                <value>
                    <fullName>Chapter Funds</fullName>
                </value>
                <value>
                    <fullName>Inner City Outings</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Restricted National Funds</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Unrestricted funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAU_Desc__c</fullName>
        <description>Lookup to the GAU Description</description>
        <formula>rC_Giving__GAU__r.rC_Giving__Description__c</formula>
        <label>GAU Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAU_ID__c</fullName>
        <formula>rC_Giving__GAU__r.GAU_ID__c</formula>
        <label>GAU ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GivingType__c</fullName>
        <description>Product table field</description>
        <label>Giving Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Donations</fullName>
                </value>
                <value>
                    <fullName>Fact sheets</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Membership upgrade</fullName>
                </value>
                <value>
                    <fullName>Premium products</fullName>
                </value>
                <value>
                    <fullName>Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Other Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Giving_Number__c</fullName>
        <formula>IF(ISBLANK(External_ID__c) == FALSE, External_ID__c , Auto_Giving_Number__c)</formula>
        <label>Giving #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecast__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvcLineNo__c</fullName>
        <description>Payment table field</description>
        <label>Invoice Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvcNo__c</fullName>
        <description>Payment table field</description>
        <label>Invoice Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Gift_Donation__c</fullName>
        <description>Indicates whether the donation is a major gift</description>
        <formula>RecordTypeId = &quot;012i0000000xb3f&quot; &amp;&amp; 
ISPICKVAL(GivingType__c, &quot;Donations&quot;) &amp;&amp;  
LEFT(Primary_Campaign_Name__c, 1) = &quot;Z&quot;</formula>
        <label>Major Gift Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matches_Parent_Campaign_Source__c</fullName>
        <description>Does the Campaign Source Code match the Parent Opportunitie&apos;s Campaign Source Code</description>
        <formula>Primary_Campaign_Name__c =  rC_Giving__Parent__r.Primary_Campaign_Name__c</formula>
        <label>Matches Parent Campaign Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matches_Parent_GAU__c</fullName>
        <description>Does this record&apos;s GAU match its parent&apos;s?</description>
        <formula>GAU_ID__c =  rC_Giving__Parent__r.GAU_ID__c</formula>
        <label>Matches Parent GAU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Giving__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Giving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrdMedia__c</fullName>
        <description>Product table field</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Giving_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field to be automatically populated for non-Proposal Record types of the same account as the existing account lookup. Should allow for a separate related list on the layout.</description>
        <label>Other Giving Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Other Giving</relationshipLabel>
        <relationshipName>OtherGiving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Giving_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field to be automatically populated for non-Proposal Record types of the same contact as the existing contact lookup.</description>
        <label>Other Giving Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Other Giving</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_GAU_Desc__c</fullName>
        <description>Parent GAU Description lookup</description>
        <formula>Parent_General_Accounting_Unit__r.rC_Giving__Description__c</formula>
        <label>Parent GAU Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_General_Accounting_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent GAU. Also referred to as Fund Category</description>
        <inlineHelpText>Also referred to as fund category</inlineHelpText>
        <label>Parent General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Opportunities (Parent General Accounting Unit)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Code__c</fullName>
        <label>Premium Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Name__c</fullName>
        <description>Primary Campaign Source Name, for view filtering</description>
        <formula>Campaign.Name</formula>
        <inlineHelpText>Primary Campaign Source Name.</inlineHelpText>
        <label>Primary Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field to be automatically populated for Proposal Record types of the same account as the existing account lookup. Should allow for a separate related list on the layout.</description>
        <label>Proposal Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Giving Proposals</relationshipLabel>
        <relationshipName>GivingProposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field to be automatically populated for Proposal Record types of the same contact as the existing contact lookup.</description>
        <label>Proposal Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Giving Proposals</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <description>Product table field</description>
        <label>Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Contributing</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Honorary</fullName>
                </value>
                <value>
                    <fullName>Legal Defense Fund</fullName>
                </value>
                <value>
                    <fullName>Life Membership</fullName>
                </value>
                <value>
                    <fullName>Limited Income</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>To allow membership upgrade</fullName>
                </value>
                <value>
                    <fullName>State Committee on Civic Education</fullName>
                </value>
                <value>
                    <fullName>Sierra Club Independent Action</fullName>
                </value>
                <value>
                    <fullName>SCPC</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Supporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <description>URL that the donation came from, primarily to distinguish AddUp header vs in-line donations</description>
        <label>Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Website__c</fullName>
        <description>Website the donation came from, based on field Source_URL__c</description>
        <formula>IF( 
CONTAINS( Source_URL__c , &quot;addup.org&quot;), &quot;AddUP&quot;, 
IF( CONTAINS( Source_URL__c , &quot; sierra.secure.force.com&quot;) , &quot;Salesforce&quot;, 
IF( NOT(ISBLANK( Source_URL__c )) , &quot;Other&quot;, null) 
))</formula>
        <label>Source Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Deductible_Amount__c</fullName>
        <formula>IF(
(ISPICKVAL(StageName, &quot;Closed Won&quot;) &amp;&amp; ISPICKVAL( Recipient__c , &quot;Foundation&quot;)),
(rC_Giving__Closed_Amount__c - Fair_Market_Value__c),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Deductible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Charge_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times this Transaction has been submitted to a Payment Processor.</description>
        <inlineHelpText>Number of times this Transaction has been submitted to a Payment Processor.</inlineHelpText>
        <label>Charge Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Is_Auto_Submit_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, indicates this transaction should be auto submitted for payment.</description>
        <inlineHelpText>Indicates this transaction should be auto submitted for payment.</inlineHelpText>
        <label>Auto-Submit Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Code__c</fullName>
        <description>Stores the response code received from payment processor</description>
        <inlineHelpText>Stores the response code received from payment processor</inlineHelpText>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Date_Time__c</fullName>
        <description>Stores the Date/Time of response received from payment processor.</description>
        <inlineHelpText>Stores the Date/Time of response received from payment processor.</inlineHelpText>
        <label>Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Message__c</fullName>
        <description>Automatically populated, authorization approval or error message.</description>
        <inlineHelpText>Automatically populated, authorization approval or error message.</inlineHelpText>
        <label>Response Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Rollup_Heartland_Transactions__c</fullName>
        <description>Auto populated, indicates the most recent Heartland Transaction date/time.</description>
        <inlineHelpText>Indicates the most recent Heartland Transaction date/time.</inlineHelpText>
        <label>Rollup Heartland Transactions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Rollup_Sage_Vault_Bankcards__c</fullName>
        <description>Auto populated, indicates the most recent Sage Vault Bankcards date/time.</description>
        <inlineHelpText>Indicates the most recent Sage Vault Bankcards date/time.</inlineHelpText>
        <label>Rollup Sage Vault Bankcards</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Rollup_Sage_Vault_Virtual_Checks__c</fullName>
        <description>Auto populated, indicates the most recent Sage Virtual Checks date/time.</description>
        <inlineHelpText>Indicates the most recent Sage Virtual Checks date/time.</inlineHelpText>
        <label>Rollup Sage Vault Virtual Checks</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Account_Name__c</fullName>
        <description>used for internal optimization: uses a formula field instead of a SOQL query, in the &quot;naming an opportunity&quot; trigger</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account name used when naming an opportunity.</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
</CustomObject>